--- a/sources/export_presets.cfg
+++ b/sources/export_presets.cfg
@@ -32,7 +32,7 @@ launcher_icons/xxhdpi_144x144="res://icon.png"
 launcher_icons/xhdpi_96x96="res://icon.png"
 launcher_icons/hdpi_72x72="res://icon.png"
 launcher_icons/mdpi_48x48="res://icon.png"
-keystore/release=""
+keystore/release="C:/Users/Non0w/debug.keystore"
 keystore/release_user=""
 keystore/release_password=""
 apk_expansion/enable=false
@@ -207,3 +207,51 @@ user_permissions/16=false
 user_permissions/17=false
 user_permissions/18=false
 user_permissions/19=false
+
+[preset.1]
+
+name="Linux/X11"
+platform="Linux/X11"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+patch_list=PoolStringArray(  )
+
+[preset.1.options]
+
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
+
+[preset.2]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+patch_list=PoolStringArray(  )
+
+[preset.2.options]
+
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
+application/icon=""
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
