--- a/sources/export_presets.cfg
+++ b/sources/export_presets.cfg
@@ -7,6 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
+export_path=""
 patch_list=PoolStringArray(  )
 
 [preset.0.options]
@@ -27,6 +28,7 @@ screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
+screen/opengl_debug=false
 launcher_icons/xxxhdpi_192x192="res://icon.png"
 launcher_icons/xxhdpi_144x144="res://icon.png"
 launcher_icons/xhdpi_96x96="res://icon.png"
@@ -217,13 +219,16 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
+export_path=""
 patch_list=PoolStringArray(  )
 
 [preset.1.options]
 
+texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
@@ -237,13 +242,16 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
+export_path=""
 patch_list=PoolStringArray(  )
 
 [preset.2.options]
 
+texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
