--- a/sources/export_presets.cfg
+++ b/sources/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="D:/GameDev/godot/buttbutt_adventures/ButtButt Adventures.apk"
 patch_list=PoolStringArray(  )
 
 [preset.0.options]
@@ -18,8 +18,8 @@ custom_package/debug=""
 custom_package/release=""
 command_line/extra_args=""
 version/code=1
-version/name="0.01"
-package/unique_name="org.monokeros.buttbutt_adventures"
+version/name="0.1.0"
+package/unique_name="com.arnaudcoj.buttbutt_adventures"
 package/name="ButtButt Adventures"
 package/signed=true
 screen/immersive_mode=true
@@ -34,7 +34,7 @@ launcher_icons/xxhdpi_144x144="res://icon.png"
 launcher_icons/xhdpi_96x96="res://icon.png"
 launcher_icons/hdpi_72x72="res://icon.png"
 launcher_icons/mdpi_48x48="res://icon.png"
-keystore/release="C:/Users/Non0w/debug.keystore"
+keystore/release="D:/GameDev/debug.keystore"
 keystore/release_user=""
 keystore/release_password=""
 apk_expansion/enable=false
@@ -219,7 +219,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="D:/GameDev/godot/buttbutt_adventures/x11/ButtButt Adventures.x86_64"
 patch_list=PoolStringArray(  )
 
 [preset.1.options]
@@ -242,7 +242,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="D:/GameDev/godot/buttbutt_adventures/windows/ButtButt Adventures.exe"
 patch_list=PoolStringArray(  )
 
 [preset.2.options]
