--- a/sources/export_presets.cfg
+++ b/sources/export_presets.cfg
@@ -9,6 +9,8 @@ include_filter=""
 exclude_filter=""
 export_path="D:/GameDev/godot/buttbutt_adventures/ButtButt Adventures.apk"
 patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
 
 [preset.0.options]
 
@@ -17,8 +19,8 @@ one_click_deploy/clear_previous_install=true
 custom_package/debug=""
 custom_package/release=""
 command_line/extra_args=""
-version/code=1
-version/name="0.1.0"
+version/code=2
+version/name="0.2.0"
 package/unique_name="com.arnaudcoj.buttbutt_adventures"
 package/name="ButtButt Adventures"
 package/signed=true
@@ -34,7 +36,10 @@ launcher_icons/xxhdpi_144x144="res://icon.png"
 launcher_icons/xhdpi_96x96="res://icon.png"
 launcher_icons/hdpi_72x72="res://icon.png"
 launcher_icons/mdpi_48x48="res://icon.png"
-keystore/release="D:/GameDev/debug.keystore"
+keystore/debug=""
+keystore/debug_user=""
+keystore/debug_password=""
+keystore/release="/mnt/win_games/GameDev/buttbutt_adventures.keystore"
 keystore/release_user=""
 keystore/release_password=""
 apk_expansion/enable=false
@@ -44,6 +49,7 @@ architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
+permissions/custom_permissions=PoolStringArray(  )
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
@@ -189,26 +195,6 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
-user_permissions/0=false
-user_permissions/1=false
-user_permissions/2=false
-user_permissions/3=false
-user_permissions/4=false
-user_permissions/5=false
-user_permissions/6=false
-user_permissions/7=false
-user_permissions/8=false
-user_permissions/9=false
-user_permissions/10=false
-user_permissions/11=false
-user_permissions/12=false
-user_permissions/13=false
-user_permissions/14=false
-user_permissions/15=false
-user_permissions/16=false
-user_permissions/17=false
-user_permissions/18=false
-user_permissions/19=false
 
 [preset.1]
 
@@ -221,6 +207,8 @@ include_filter=""
 exclude_filter=""
 export_path="D:/GameDev/godot/buttbutt_adventures/x11/ButtButt Adventures.x86_64"
 patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
 
 [preset.1.options]
 
@@ -244,6 +232,8 @@ include_filter=""
 exclude_filter=""
 export_path="D:/GameDev/godot/buttbutt_adventures/windows/ButtButt Adventures.exe"
 patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
 
 [preset.2.options]
 
